fix: test and directory permissions