@@ -1,5 +1,6 @@
 package no.elixir.e2eTests;
 
+import static no.elixir.e2eTests.utils.JsonUtils.toCompactJson;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.fail;
 
@@ -17,7 +18,6 @@ import java.nio.file.Files;
 import java.security.*;
 import java.security.interfaces.RSAPrivateKey;
 import java.security.interfaces.RSAPublicKey;
-import java.security.spec.InvalidKeySpecException;
 import java.security.spec.PKCS8EncodedKeySpec;
 import java.security.spec.X509EncodedKeySpec;
 import java.sql.DriverManager;
@@ -36,12 +36,12 @@ import kong.unirest.UnirestInstance;
 import no.elixir.crypt4gh.stream.Crypt4GHInputStream;
 import no.elixir.crypt4gh.stream.Crypt4GHOutputStream;
 import no.elixir.crypt4gh.util.KeyUtils;
+import no.elixir.e2eTests.utils.CertificateUtil;
 import org.apache.commons.codec.binary.Hex;
 import org.apache.commons.codec.digest.DigestUtils;
 import org.apache.commons.io.FileUtils;
 import org.apache.commons.io.IOUtils;
 import org.apache.http.conn.ssl.NoopHostnameVerifier;
-import org.json.JSONException;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -51,15 +51,12 @@ import org.slf4j.LoggerFactory;
 
 public class IngestionTest {
 
-  private static final Logger log = LoggerFactory.getLogger(IngestionTest.class);
-
-  static final Dotenv dotenv = Dotenv.load();
-
   public static final String BEGIN_PUBLIC_KEY = "-----BEGIN PUBLIC KEY-----";
   public static final String END_PUBLIC_KEY = "-----END PUBLIC KEY-----";
   public static final String BEGIN_PRIVATE_KEY = "-----BEGIN PRIVATE KEY-----";
   public static final String END_PRIVATE_KEY = "-----END PRIVATE KEY-----";
-
+  static final Dotenv dotenv = Dotenv.load();
+  private static final Logger log = LoggerFactory.getLogger(IngestionTest.class);
   private static final String DB_USERNAME = dotenv.get("SDA_DB_USERNAME");
   private static final String DB_PASSWORD = dotenv.get("SDA_DB_PASSWORD");
   private static final String EGA_BOX_USERNAME = dotenv.get("EGA_BOX_USERNAME");
@@ -79,9 +76,9 @@ public class IngestionTest {
   private String correlationId;
 
   @BeforeEach
-  public void setup() throws IOException, GeneralSecurityException {
+  public void setup() throws Exception {
 
-    String basePath = "./tmp/";
+    String basePath = "./";
 
     long fileSize = 1024 * 1024 * 10;
     log.info("Generating {} bytes file to submit...", fileSize);
@@ -105,8 +102,7 @@ public class IngestionTest {
     log.info("Encrypting the file with Crypt4GH...");
     encFile = new File(basePath + rawFile.getName() + ".enc");
 
-    PublicKey localEGAInstancePublicKey =
-        keyUtils.readPublicKey(new File(getCertificateLocation("ega.pub.pem")));
+    PublicKey localEGAInstancePublicKey = keyUtils.readPublicKey(getCertificateFile("ega.pub.pem"));
 
     try (FileOutputStream fileOutputStream = new FileOutputStream(encFile);
         Crypt4GHOutputStream crypt4GHOutputStream =
@@ -146,7 +142,7 @@ public class IngestionTest {
     downloadDatasetAndVerifyResults();
   }
 
-  private void upload() throws IOException, InvalidKeySpecException, NoSuchAlgorithmException {
+  private void upload() throws Exception {
     log.info("Uploading a file through a proxy...");
     String token = generateVisaToken("upload");
     log.info("Visa JWT token: {}", token);
@@ -372,8 +368,7 @@ public class IngestionTest {
     log.info("Dataset release message sent successfully");
   }
 
-  private void downloadDatasetAndVerifyResults()
-      throws GeneralSecurityException, IOException, JSONException {
+  private void downloadDatasetAndVerifyResults() throws Exception {
 
     String token = generateVisaToken(datasetId);
     log.info("Visa JWT token: {}", token);
@@ -387,8 +382,9 @@ public class IngestionTest {
 
     // Meta data check
     String expected =
-        String.format(
-                """
+        toCompactJson(
+            String.format(
+                    """
                                         [{
                                             "fileId": "%s",
                                             "datasetId": "%s",
@@ -403,14 +399,15 @@ public class IngestionTest {
                                             "fileStatus": "READY"
                                         }]
                                         """,
-                stableId, datasetId, encFile.getName(), archivePath, rawSHA256Checksum)
-            .strip();
+                    stableId, datasetId, encFile.getName(), archivePath, rawSHA256Checksum)
+                .strip());
     String actual =
-        Unirest.get(String.format("http://localhost/metadata/datasets/%s/files", datasetId))
-            .header("Authorization", "Bearer " + token)
-            .asString()
-            .getBody()
-            .strip();
+        toCompactJson(
+            Unirest.get(String.format("http://localhost/metadata/datasets/%s/files", datasetId))
+                .header("Authorization", "Bearer " + token)
+                .asString()
+                .getBody()
+                .strip());
     log.info("Expected: {}", expected);
     log.info("Actual: {}", actual);
 
@@ -444,8 +441,7 @@ public class IngestionTest {
     assertEquals(rawSHA256Checksum, obtainedChecksum);
   }
 
-  private String generateVisaToken(String resource)
-      throws NoSuchAlgorithmException, InvalidKeySpecException, IOException {
+  private String generateVisaToken(String resource) throws Exception {
     RSAPublicKey publicKey = getPublicKey();
     RSAPrivateKey privateKey = getPrivateKey();
     byte[] visaHeader =
@@ -488,12 +484,10 @@ public class IngestionTest {
         + Base64.getUrlEncoder().encodeToString(visaSignature);
   }
 
-  private RSAPublicKey getPublicKey()
-      throws NoSuchAlgorithmException, InvalidKeySpecException, IOException {
+  private RSAPublicKey getPublicKey() throws Exception {
     KeyFactory keyFactory = KeyFactory.getInstance("RSA");
     String jwtPublicKey =
-        FileUtils.readFileToString(
-            new File(getCertificateLocation("jwt.pub.pem")), Charset.defaultCharset());
+        FileUtils.readFileToString(getCertificateFile("jwt.pub.pem"), Charset.defaultCharset());
     String encodedKey =
         jwtPublicKey
             .replace(BEGIN_PUBLIC_KEY, "")
@@ -505,12 +499,10 @@ public class IngestionTest {
     return (RSAPublicKey) keyFactory.generatePublic(new X509EncodedKeySpec(decodedKey));
   }
 
-  private RSAPrivateKey getPrivateKey()
-      throws NoSuchAlgorithmException, InvalidKeySpecException, IOException {
+  private RSAPrivateKey getPrivateKey() throws Exception {
     KeyFactory keyFactory = KeyFactory.getInstance("RSA");
     String jwtPublicKey =
-        FileUtils.readFileToString(
-            new File(getCertificateLocation("jwt.priv.pem")), Charset.defaultCharset());
+        FileUtils.readFileToString(getCertificateFile("jwt.priv.pem"), Charset.defaultCharset());
     String encodedKey =
         jwtPublicKey
             .replace(BEGIN_PRIVATE_KEY, "")
@@ -531,8 +523,9 @@ public class IngestionTest {
     return sb.toString();
   }
 
-  private String getCertificateLocation(String name) {
-    return String.format("./tmp/certs/%s", name);
+  private File getCertificateFile(String name) throws Exception {
+    return CertificateUtil.getFileInContainer(
+        "file-orchestrator", "/storage/certs/%s".formatted(name));
   }
 
   @SuppressWarnings("ResultOfMethodCallIgnored")
